--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -3,11 +3,6 @@
   padding: 0;
 }
 
-a ol li {
-  text-decoration: none;
-  list-style: none;
-}
-
 ul {
   margin-block: 0;
 }
@@ -138,7 +133,6 @@ body {
   font-size: 1.1rem;
   font-weight: 500;
   padding: 1rem;
-  margin-top: 50px;
   border-radius: 30px;
   cursor: pointer;
   transition-duration: 0.25s;
@@ -598,7 +592,7 @@ body {
 .submenu {
   max-width: 100%;
   overflow: hidden;
-  padding: 8rem 1rem;
+  padding: 2rem 2rem;
   background: #f3f3f3;
 }
 
@@ -606,7 +600,6 @@ body {
   text-transform: uppercase;
   position: relative;
   padding-bottom: 0.5rem;
-  margin: -75px 0;
   font-weight: normal;
 }
 .submenu__title:after {
@@ -620,7 +613,7 @@ body {
 }
 
 .menuItem {
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   background: white;
   border-radius: 0.75rem;
@@ -628,9 +621,14 @@ body {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
   cursor: pointer;
-  -webkit-animation: itemDisplay 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-          animation: itemDisplay 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-  transform: scale(0);
+  /*animation: itemDisplay 0.6s cubic-bezier(0.5, 1.58, 0.34, 0.82);
+  transform: scale(0.7);*/
+  -webkit-animation: itemDisplay 0.6s;
+          animation: itemDisplay 0.6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-timing-function: 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48) forwards;
+          animation-timing-function: 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48) forwards;
   max-width: 100%;
 }
 .menuItem__header {
@@ -705,48 +703,48 @@ body {
 }
 
 .delay-1 {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.delay-2 {
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
 
-.delay-2 {
+.delay-3 {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.delay-4 {
   -webkit-animation-delay: 2s;
           animation-delay: 2s;
 }
 
-.delay-3 {
+.delay-5 {
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
+.delay-6 {
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
 }
 
-.delay-4 {
+.delay-7 {
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
+}
+
+.delay-8 {
   -webkit-animation-delay: 4s;
           animation-delay: 4s;
 }
 
-.delay-5 {
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
-
-.delay-6 {
-  -webkit-animation-delay: 6s;
-          animation-delay: 6s;
-}
-
-.delay-7 {
-  -webkit-animation-delay: 7s;
-          animation-delay: 7s;
-}
-
-.delay-8 {
-  -webkit-animation-delay: 8s;
-          animation-delay: 8s;
-}
-
 .delay-9 {
-  -webkit-animation-delay: 9s;
-          animation-delay: 9s;
+  -webkit-animation-delay: 4.5s;
+          animation-delay: 4.5s;
 }
 
 .fa-check:before {
@@ -762,18 +760,22 @@ body {
 
 @-webkit-keyframes itemDisplay {
   0% {
-    transform: translateY(0);
+    opacity: 0;
+    transform: scale(0.5, 0.5);
   }
   100% {
-    transform: translateY(100px);
+    opacity: 1;
+    transform: scale(1, 1);
   }
 }
 
 @keyframes itemDisplay {
   0% {
-    transform: translateY(0);
+    opacity: 0;
+    transform: scale(0.5, 0.5);
   }
   100% {
-    transform: translateY(100px);
+    opacity: 1;
+    transform: scale(1, 1);
   }
 }/*# sourceMappingURL=index.css.map */
