--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -156,39 +156,39 @@ body {
 .footer {
   background-color: #353535;
 }
-.footer .container {
+.footer .footer__container {
   display: flex;
   flex-direction: column;
   padding: 1rem;
 }
 @media screen and (min-width: 769px) {
-  .footer .container .footer__logo {
+  .footer .footer__container .footer__logo {
     display: flex;
     justify-content: center;
   }
-  .footer .container .footer__items {
+  .footer .footer__container .footer__items {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
   }
 }
-.footer .container .footer__logo {
+.footer .footer__container .footer__logo {
   color: white;
   font-family: Shrikhand, sans-serif, "cursive";
   margin: 0;
   font-size: 1.2rem;
   margin-bottom: 1rem;
 }
-.footer .container .footer__items {
+.footer .footer__container .footer__items {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.footer .container .footer__items .footer__items__item {
+.footer .footer__container .footer__items .footer__items__item {
   margin: 0.5rem 0;
 }
-.footer .container .footer__items .footer__link {
+.footer .footer__container .footer__items .footer__link {
   color: white;
   text-decoration: none;
 }
@@ -556,7 +556,7 @@ body {
 
 .container {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: -4rem auto 0 auto;
 }
 
 .menu__btn {
