--- a/ohmyfood/styles/layout/_footer.scss
+++ b/ohmyfood/styles/layout/_footer.scss
@@ -1,40 +1,37 @@
 .footer {
-    background-color: #353535;
-    .container {
-        @media screen and (min-width: 769px) {
-            .footer__logo{
-                display: flex;
-                justify-content: center;
-                
-            }
-            .footer__items {
-                @include center;
-                gap: 30px;
-                
-            }  
-        }
+  background-color: #353535;
+  .footer__container {
+    @media screen and (min-width: 769px) {
+      .footer__logo {
         display: flex;
-        flex-direction: column;
-        padding: 1rem;
-        .footer__logo{
-            color: white;
-            font-family: $font-title-logo, "cursive";
-            margin: 0;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-        .footer__items {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            .footer__items__item {
-                margin: 0.5rem 0;
-            }
-            .footer__link {
-                color: white;
-                text-decoration: none;
-            }
-
-        }
+        justify-content: center;
+      }
+      .footer__items {
+        @include center;
+        gap: 30px;
+      }
     }
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    .footer__logo {
+      color: white;
+      font-family: $font-title-logo, "cursive";
+      margin: 0;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+    .footer__items {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      .footer__items__item {
+        margin: 0.5rem 0;
+      }
+      .footer__link {
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
 }
