fix errors from w3c validator

--- a/ohmyfood/styles/pages/_menu.scss
+++ b/ohmyfood/styles/pages/_menu.scss
@@ -114,9 +114,9 @@
   box-shadow: 0.25rem 0.25rem 1rem rgb(0 0 0 / 10%);
   overflow: hidden;
   cursor: pointer;
-  animation: itemDisplay 0.6s;
+  animation: itemDisplay 0.7s;
   animation-fill-mode: both;
-  animation-timing-function: 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48) forwards;
+  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
 
   max-width: 100%;
   &__header {
@@ -194,7 +194,7 @@
 $delays: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9;
 @each $delay in $delays {
   .delay-#{$delay} {
-    animation-delay: #{$delay/2}+ s;
+    animation-delay: #{calc($delay/2)}+ s;
   }
 }
 
