--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -633,12 +633,12 @@ body {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
   cursor: pointer;
-  -webkit-animation: itemDisplay 0.6s;
-          animation: itemDisplay 0.6s;
+  -webkit-animation: itemDisplay 0.7s;
+          animation: itemDisplay 0.7s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
-  -webkit-animation-timing-function: 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48) forwards;
-          animation-timing-function: 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48) forwards;
+  -webkit-animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
+          animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
   max-width: 100%;
 }
 .menuItem__header {
