--- a/ohmyfood/styles/base/_settings.scss
+++ b/ohmyfood/styles/base/_settings.scss
@@ -14,6 +14,7 @@ $color-bg-lightgrey: #fafafa;
 @mixin shadowElement {
   box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 60%);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -118,13 +119,7 @@ body {
   background: linear-gradient(180deg, $color-secondary 0%, $color-primary 90%);
   &:hover {
     @include shadowElement;
-
-    /*transition: 1s ease-in-out;*/
-    /*background-color: white;*/
-    background: linear-gradient(
-      180deg,
-      $color-secondary 5%,
-      $color-primary 70%
-    );
+    transition: 1s ease-in-out;
+    filter: brightness(105%);
   }
 }
