--- a/ohmyfood/styles/pages/_homepage.scss
+++ b/ohmyfood/styles/pages/_homepage.scss
@@ -1,270 +1,263 @@
-.loaderWrap  {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: whitesmoke;
-    opacity: 0.6;
-    z-index: 1000;
+.loaderWrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: whitesmoke;
+  opacity: 0.6;
+  z-index: 1000;
 }
-.loader  {
-  
+.loader {
   overflow: auto;
   margin: auto;
   position: absolute;
   z-index: 1001;
-  top: 0; left: 0; bottom: 0; right: 0;
-    animation: rotate 1s infinite;
-    animation-delay: 3s;  
-    height: 50px;
-    width: 50px;
-    &:before,
-    &:after {   
-      border-radius: 50%;
-      content: '';
-      display: block;
-      height: 20px;  
-      width: 20px;
-    }
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  animation: rotate 1s infinite;
+  animation-delay: 3s;
+  height: 50px;
+  width: 50px;
+  &:before,
+  &:after {
+    border-radius: 50%;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+  }
 
-    &:before {
-      animation: ball1 1s infinite;  
-      background-color: $color-secondary;
-      box-shadow: 30px 0 0 #f8b334;
-      margin-bottom: 10px;
-    }
-    &:after {
-      animation: ball2 1s infinite; 
-      background-color: #00a096;
-      box-shadow: 30px 0 0 $color-tertiary;
-    }
+  &:before {
+    animation: ball1 1s infinite;
+    background-color: $color-secondary;
+    box-shadow: 30px 0 0 #f8b334;
+    margin-bottom: 10px;
+  }
+  &:after {
+    animation: ball2 1s infinite;
+    background-color: #00a096;
+    box-shadow: 30px 0 0 $color-tertiary;
+  }
 }
-  
-  
-  @keyframes rotate {
-    0% { 
-      -webkit-transform: rotate(0deg) scale(0.8); 
-      -moz-transform: rotate(0deg) scale(0.8);
-    }
-    50% { 
-      -webkit-transform: rotate(360deg) scale(1.2); 
-      -moz-transform: rotate(360deg) scale(1.2);
-    }
-    100% { 
-      -webkit-transform: rotate(720deg) scale(0.8); 
-      -moz-transform: rotate(720deg) scale(0.8);
-    }
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.8);
+    -moz-transform: rotate(0deg) scale(0.8);
   }
-  
-  @keyframes ball1 {
-    0% {
-      box-shadow: 30px 0 0 $color-primary;
-    }
-    50% {
-      box-shadow: 0 0 0 $color-primary;
-      margin-bottom: 0;
-      -webkit-transform: translate(15px,15px);
-      -moz-transform: translate(15px, 15px);
-    }
-    100% {
-      box-shadow: 30px 0 0 $color-primary;
-      margin-bottom: 10px;
-    }
+  50% {
+    -webkit-transform: rotate(360deg) scale(1.2);
+    -moz-transform: rotate(360deg) scale(1.2);
   }
-  
-  @keyframes ball2 {
-    0% {
-      box-shadow: 30px 0 0 $color-tertiary;
-    }
-    50% {
-      box-shadow: 0 0 0 $color-tertiary;
-      margin-top: -20px;
-      -webkit-transform: translate(15px,15px);
-      -moz-transform: translate(15px, 15px);
-    }
-    100% {
-      box-shadow: 30px 0 0 $color-tertiary;
-      margin-top: 0;
-    }
+  100% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+    -moz-transform: rotate(720deg) scale(0.8);
   }
+}
+
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 $color-primary;
+  }
+  50% {
+    box-shadow: 0 0 0 $color-primary;
+    margin-bottom: 0;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 $color-primary;
+    margin-bottom: 10px;
+  }
+}
+
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 $color-tertiary;
+  }
+  50% {
+    box-shadow: 0 0 0 $color-tertiary;
+    margin-top: -20px;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 $color-tertiary;
+    margin-top: 0;
+  }
+}
 
 #loader-block {
-    -moz-animation: hideLoader 0s ease-in 3s forwards;
-    /* Firefox */
-    -webkit-animation: hideLoader 0s ease-in 3s forwards;
-    /* Safari and Chrome */
-    -o-animation: hideLoader 0s ease-in 3s forwards;
-    /* Opera */
-    animation: hideLoader 0s ease-in 3s forwards;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
+  -moz-animation: hideLoader 0s ease-in 3s forwards;
+  /* Firefox */
+  -webkit-animation: hideLoader 0s ease-in 3s forwards;
+  /* Safari and Chrome */
+  -o-animation: hideLoader 0s ease-in 3s forwards;
+  /* Opera */
+  animation: hideLoader 0s ease-in 3s forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 @keyframes hideLoader {
-    to {
-        width:0;
-        height:0;
-        overflow:hidden;
-    }
+  to {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
 }
 @-webkit-keyframes hideLoader {
-    to {
-        width:0;
-        height:0;
-        visibility:hidden;
-    }
+  to {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+  }
 }
 
 .location {
-    @include center;
-    padding: 30px;
-    background-color: $color-bg-grey;
-    gap:5px;
-    h2 {
-        font-family: $font-txt;
-    }
+  @include center;
+  padding: 30px;
+  background-color: $color-bg-grey;
+  gap: 5px;
+  h2 {
+    font-family: $font-txt;
+  }
 }
 
 .about {
-    text-align: center;
-    background: $color-bg-lightgrey;
-    padding: 1.5rem;
-    height: 250px;
-    .about__subtitle {
-        font-weight:300;
-        margin: 2.3rem 0;
-    }
-    
+  text-align: center;
+  background: $color-bg-lightgrey;
+  padding: 1.5rem;
+  height: 250px;
+  .about__subtitle {
+    font-weight: 300;
+    margin: 2.3rem 0;
+  }
 }
 
 .step {
-    @include center;
-    .step__wrapper {
-        margin-top: 50px;  
-    }
+  @include center;
+  .step__wrapper {
+    margin-top: 50px;
+  }
 }
-.step__items { 
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    counter-reset: compteListe;
+.step__items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  counter-reset: compteListe;
 }
 
 .step__items__item {
-    padding: 1.5rem;
-    margin: 1rem 0 1rem 0.75rem;
-    box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
-    border-radius: 1.25rem;
-    background-color: #f6f6f6;
-    display: flex;
-    position: relative;
-    &:before {
-        @include center;
-        color:white;
-        counter-increment: compteListe 1;
-        content: counter(compteListe) " ";
-        background: $color-primary;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        top:0;
-        left:0;
-        position: absolute;
-        transform: translate(-50%, 50%);
-    }
-    &:hover {
-        @include shadowElement;
-        
-    }
-    .step__icon {
-        margin-right: 10px;
-    }
+  padding: 1.5rem;
+  margin: 1rem 0 1rem 0.75rem;
+  box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
+  border-radius: 1.25rem;
+  background-color: #f6f6f6;
+  display: flex;
+  position: relative;
+  &:before {
+    @include center;
+    color: white;
+    counter-increment: compteListe 1;
+    content: counter(compteListe) " ";
+    background: $color-primary;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    transform: translate(-50%, 50%);
+  }
+  &:hover {
+    @include shadowElement;
+  }
+  .step__icon {
+    margin-right: 10px;
+  }
 }
 
 .restaurants {
-    @include center;
-    margin: 50px auto 0 auto;
-    background: $color-bg-lightgrey;
+  @include center;
+  margin: 50px auto 0 auto;
+  background: $color-bg-lightgrey;
 
-    .container {
-        max-width: 1280px;
-        margin: auto;
-        padding-bottom: 50px;
-        position: relative;
-        .restaurants__title {
-            margin:20px auto;
-        }
-        .cards {
-
-            @media screen and (min-width: 769px) {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                gap: 30px;
-                
-            }
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            column-gap: 2rem;
-            row-gap: 2rem;
-           
-            .card {
-                background-color: white;
-                border-radius: 1rem;
-                position: relative;
-                text-decoration: none;
-                color: inherit;
-                display: block;
-                box-shadow: 0 0 10px 0 rgb(0 0 0 / 30%);
-                transition: 0.2s;
-            }
-            .card__img {
-                height: 12rem;
-                width: 100%;
-                border:0px solid transparent;
-                border-radius: 1rem 1rem 0 0;
-                box-shadow: none;
-                object-fit: cover;
-            }
-            .card__badge {
-                background-color: $color-tertiary;
-                color: #1b6150;
-                padding: 0.5rem;
-                border-radius: 0.125rem;
-                position: absolute;
-                top: 1rem;
-                right: 0.75rem;
-            }
-            .card__footer {
-                padding: 1rem;
-                position: relative;
-                display: flex;
-                align-items: center;
-            }
-            .card__content {
-                flex: 1;
-            }
-            .card__title {
-                margin: 0;
-                margin-bottom: 0.25rem;
-            }
-        }
+  .container {
+    max-width: 1280px;
+    margin: auto;
+    padding-bottom: 50px;
+    position: relative;
+    .restaurants__title {
+      margin: 20px auto;
     }
-    
+    .cards {
+      @media screen and (min-width: 769px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+      }
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      column-gap: 2rem;
+      row-gap: 2rem;
+
+      .card {
+        background-color: white;
+        border-radius: 1rem;
+        position: relative;
+        text-decoration: none;
+        color: inherit;
+        display: block;
+        box-shadow: 0 0 10px 0 rgb(0 0 0 / 30%);
+        transition: 0.2s;
+        &:hover {
+          @include shadowElement;
+        }
+      }
+      .card__img {
+        height: 12rem;
+        width: 100%;
+        border: 0px solid transparent;
+        border-radius: 1rem 1rem 0 0;
+        box-shadow: none;
+        object-fit: cover;
+      }
+      .card__badge {
+        background-color: $color-tertiary;
+        color: #1b6150;
+        padding: 0.5rem;
+        border-radius: 0.125rem;
+        position: absolute;
+        top: 1rem;
+        right: 0.75rem;
+      }
+      .card__footer {
+        padding: 1rem;
+        position: relative;
+        display: flex;
+        align-items: center;
+      }
+      .card__content {
+        flex: 1;
+      }
+      .card__title {
+        margin: 0;
+        margin-bottom: 0.25rem;
+      }
+    }
+  }
 }
 
 .step__items {
-    @media screen and (min-width: 769px) {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr ;
-        gap: 30px;
-        .step__title {
-            @include center;
-        }
+  @media screen and (min-width: 769px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    .step__title {
+      @include center;
     }
-    
+  }
 }
-
-
-
-
-
