--- a/ohmyfood/styles/layout/_footer.scss
+++ b/ohmyfood/styles/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: #353535;
   .footer__container {
-    @media screen and (min-width: 769px) {
+    @include devices(tablet-up) {
       .footer__logo {
         display: flex;
         justify-content: center;
@@ -31,6 +31,10 @@
       .footer__link {
         color: white;
         text-decoration: none;
+
+        i {
+          margin-right: 10px;
+        }
       }
     }
   }
