--- a/ohmyfood/styles/index.scss
+++ b/ohmyfood/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./base/settings";
+@import "./base/responsive";
 @import "./layout/header";
 @import "./layout/footer";
 @import "./pages/homepage";
