--- a/ohmyfood/styles/base/_settings.scss
+++ b/ohmyfood/styles/base/_settings.scss
@@ -109,6 +109,7 @@ body {
 
 .btn__component {
   color: white;
+  text-decoration: none;
   font-size: 1.1rem;
   font-weight: 500;
   padding: 1rem;
