--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -130,6 +130,7 @@ body {
 }
 .btn__component {
   color: white;
+  text-decoration: none;
   font-size: 1.1rem;
   font-weight: 500;
   padding: 1rem;
