--- a/ohmyfood/styles/index.scss
+++ b/ohmyfood/styles/index.scss
@@ -2,5 +2,6 @@
 @import "./base/responsive";
 @import "./layout/header";
 @import "./layout/footer";
+@import "./composants/btn";
 @import "./pages/homepage";
 @import "./pages/menu";
