--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -194,7 +194,7 @@ body {
 .btn__component:hover {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
   transition: 1s ease-in-out;
-  filter: brightness(105%);
+  background: linear-gradient(180deg, rgba(119, 44, 232, 0.68) 11.5%, rgb(119, 44, 232) 91.2%);
 }
 
 .loaderWrap {
