--- a/ohmyfood/styles/index.css
+++ b/ohmyfood/styles/index.css
@@ -56,7 +56,7 @@ body {
     transform: scale(1);
   }
   80% {
-    fill: #ff79da;
+    fill: #9356dc;
     transform: scale(1.1);
   }
   90% {
@@ -64,7 +64,7 @@ body {
   }
   100% {
     stroke-dashoffset: 310;
-    fill: #ff79da;
+    fill: #9356dc;
   }
 }
 
@@ -81,7 +81,7 @@ body {
     transform: scale(1);
   }
   80% {
-    fill: #ff79da;
+    fill: #9356dc;
     transform: scale(1.1);
   }
   90% {
@@ -89,7 +89,7 @@ body {
   }
   100% {
     stroke-dashoffset: 310;
-    fill: #ff79da;
+    fill: #9356dc;
   }
 }
 @-webkit-keyframes fade-animation {
@@ -98,7 +98,7 @@ body {
     transform: scale(1);
   }
   80% {
-    fill: #ff79da;
+    fill: #9356dc;
     transform: scale(1.1);
     opacity: 1;
   }
@@ -116,7 +116,7 @@ body {
     transform: scale(1);
   }
   80% {
-    fill: #ff79da;
+    fill: #9356dc;
     transform: scale(1.1);
     opacity: 1;
   }
@@ -436,6 +436,10 @@ body {
 }
 .step__items__item:hover {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+  background: linear-gradient(#cd9cf2 0%, #f6f3ff 100%);
+}
+.step__items__item:hover .step__icon {
+  color: #9356dc;
 }
 .step__items__item .step__icon {
   margin-right: 10px;
